--- a/pages/index.html
+++ b/pages/index.html
@@ -101,7 +101,7 @@
                 y: {
                     title: {
                         formatter: function (value) {
-                            return value + "<br><i>(click to view a detailed report)</i>";
+                            return value;
                         }
                     }
                 }
